# build-configs

./: .gitignore  .golangci.yaml  Cargo.toml  LICENSE  README.md  build-configs.yaml  example.json  flake.nix  go.mod  go.sum  justfile  projects.toml
.github/: renovate.json
.github/workflows/: build-and-release.yml  flake.yaml  flake.yml  golangci-lint.yaml
cmd/build-configs/: main.go
examples/go-cobra-cli/: build-configs.yaml
examples/go-lambda/: .gitignore  build-configs.yaml
internal/cli/: generate.go  root.go  version.go
internal/config/: config.go  deploy.go  find.go  global.go  go_cobra_cli.go  go_lambda.go  golangci.go  nix.go  openapi.go  quirk.go  templater.go  terraform.go  terraform_module.go
internal/templates/: ignore.go  paths.go  stored_name.go  templates.go
internal/templates/templates/go-cobra-cli/: .editorconfig  .github__workflows__flake.yaml  .github__workflows__golangci-lint.yaml  .golangci.yaml  flake.nix  justfile
internal/templates/templates/go-lambda/: flake.nix  justfile  (+5 more)
src/: cli.rs  config.rs  main.rs  schema.rs  template.rs
src/cli/: generate.rs  mod.rs
src/config/: dockerfile.rs  flake.rs  library.rs  mod.rs  pulumi.rs  service.rs
src/template/pulumi/: .dockerignore  .gitignore  .gitignore.j2  Dockerfile  Dockerfile.j2  Pulumi.yaml  Pulumi.yaml.j2  justfile  justfile.j2  tsconfig.json.j2
src/template/service/: .dockerignore.j2  .eslintignore.j2  .eslintrc.js.j2  .npmrc.j2  .prettierignore.j2  Dockerfile  docker-entrypoint.sh.j2  jest.config.js.j2  justfile  tsconfig.json.j2
template/pulumi/.circleci/: config.yml
(+33 files in other folders)
