[package]
name = "build-configs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive", "unstable-doc"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum_macros = "0.24.3"
tera = { version = "1", default-features = false }
